src/test/ui/privacy/private-struct-field-ctor.stderr
error[E0451]: field `x` of struct `a::Foo` is private
  --> $DIR/private-struct-field-ctor.rs:8:22
   |
LL | /     pub struct Foo {
LL | |         x: isize
LL | |     }
   | |_____- `a::Foo` defined here
...
LL |       let s = a::Foo { x: 1 };    //~ ERROR field `x` of struct `a::Foo` is private
   |               ---------^^^^--
   |               |        |
   |               |        private field
   |               `a::Foo` cannot be built due to private field

error: aborting due to previous error

For more information about this error, try `rustc --explain E0451`.
